@@ -15,7 +15,7 @@
 
 <p>
 
-You can <a href="http://testng.org/testng-5.8.zip">download TestNG here</a>.
+You can <a href="http://testng.org/testng-5.9.zip">download TestNG here</a>.
 </p>
 <p>For the Eclipse plug-in, we suggest using the update site:</p>
 <ul>
@@ -34,7 +34,7 @@ You can <a href="http://testng.org/testng-5.8.zip">download TestNG here</a>.
 	<li>Eclipse will then guide you through the process. </li>
 </ul>
 <p>However, should this method fail, you can also
-<a href="http://testng.org/testng-eclipse-5.8.0.2.zip">download the TestNG 
+<a href="http://testng.org/testng-eclipse-5.9.0.0.zip">download the TestNG 
 Eclipse plug-in directly</a> and extract it in your eclipse/ directory.</p>
 <p>Here are links to older TestNG versions:</p>
 <ul>
@@ -70,6 +70,7 @@ Eclipse plug-in directly</a> and extract it in your eclipse/ directory.</p>
 	<li><a href="http://testng.org/testng-5.5.zip">5.5</a></li>
 	<li><a href="http://testng.org/testng-5.6.zip">5.6</a></li>
 	<li><a href="http://testng.org/testng-5.7.zip">5.7</a></li>
+	<li><a href="http://testng.org/testng-5.8.zip">5.7</a></li>
 </ul>
 <p>TestNG is also <a href="http://code.google.com/hosting/search?q=testng&btn=Search+Projects">hosted on Google Code</a>, 
 where you can download the source through the Subversion repository or subscribe to the various mailing-lists.</p>
