@@ -29,9 +29,9 @@
 
 
 <p align="right"><font size="-2"><em>C&eacute;dric Beust (cedric at beust.com)<br>
-Current version: 5.8<br>
+Current version: 5.9<br>
 Created:&nbsp;April 27th, 2004<br>
-Last Modified:&nbsp; March 24th, 2008</em></font></p>
+Last Modified:&nbsp; March 29th, 2009</em></font></p>
 
 
 <p>TestNG is a testing framework inspired from JUnit and NUnit but introducing
