@@ -130,6 +130,7 @@ public abstract class LaunchSuite {
       suiteBuffer.setDocType("suite SYSTEM \"" + Parser.TESTNG_DTD_URL + "\"");
       
       Properties attrs = new Properties();
+      attrs.setProperty("parallel", XmlSuite.PARALLEL_NONE);
       attrs.setProperty("name", m_suiteName);
       suiteBuffer.push("suite", attrs);
       
